--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "echarts": "^4.6.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "formidable": "^1.2.1",
     "jquery": "^3.4.1",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
