--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "art-template": "^4.13.2",
     "bootstrap": "^4.4.1",
     "echarts": "^4.6.0",
     "express": "^4.17.1",
